AnalysisSpace/OnlineAnalysis/compile.log
>> Local Products Rules ..... started
>> Local Products Rules ..... done
>> Entering Package AnalysisSpace/OnlineAnalysis
>> Creating project symlinks
  src/HiggsAnalysis/CombinedLimit/python -> python/HiggsAnalysis/CombinedLimit
  src/AnalysisSpace/OnlineAnalysis/python -> python/AnalysisSpace/OnlineAnalysis
  src/AnalysisSpace/TreeMaker/python -> python/AnalysisSpace/TreeMaker
>> Entering Package AnalysisSpace/TreeMaker
>> Entering Package KinZfitter/KinZfitter
>> Entering Package KinZfitter/HelperFunction
>> Entering Package ZZMatrixElement/MEMCalculators
>> Entering Package ZZMatrixElement/MEKD
>> Entering Package ZZMatrixElement/MELA
>> Entering Package HiggsAnalysis/CombinedLimit
>> Compiling edm plugin /afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc 
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc: In member function 'bool FSRBlock::passedSuperClusterVeto(const pat::PackedCandidate&, edm::Handle<std::vector<pat::Electron> >&, bool)':
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc:254:86: error: template argument 1 is invalid
       for(edm::Ref<std::vector<pat::PackedCandidate>::const_iterator p = (*it).begin(); p!=(*it).end();p++)
                                                                                      ^
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc:254:86: error: template argument 2 is invalid
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc:254:86: error: template argument 3 is invalid
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc:254:89: error: 'p' was not declared in this scope
       for(edm::Ref<std::vector<pat::PackedCandidate>::const_iterator p = (*it).begin(); p!=(*it).end();p++)
                                                                                         ^
/afs/cern.ch/work/s/sroychow/public/HZZ4l/New2016/FrameWork/CMSSW_8_0_7_patch3/src/AnalysisSpace/OnlineAnalysis/plugins/FSRBlock.cc:254:98: error: 'edm::RefVectorIterator<std::vector<pat::PackedCandidate>, pat::PackedCandidate, edm::refhelper::FindUsingAdvance<std::vector<pat::PackedCandidate>, pat::PackedCandidate> >::reference' has no member named 'end'
       for(edm::Ref<std::vector<pat::PackedCandidate>::const_iterator p = (*it).begin(); p!=(*it).end();p++)
                                                                                                  ^
gmake: *** [tmp/slc6_amd64_gcc493/src/AnalysisSpace/OnlineAnalysis/plugins/OnlineAnalysisPlugins/FSRBlock.o] Error 1
gmake: *** [There are compilation/build errors. Please see the detail log above.] Error 2
